# yemen-economic-monitor

./: .buildinfo  .gitignore  README.html  genindex.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
_sources/: README.md
_sources/docs/: data-products.md  foundational_datasets_and_data_products.md  team.md
data/: YEM_GADM_adm1.dbf  YEM_GADM_adm1.shp  YEM_GADM_adm1.shx
data/control_areas/: AQAP Presence.dbf  AQAP Presence.sbn  AQAP Presence.sbx  AQAP Presence.shp  AQAP Presence.shp.xml  AQAP Presence.shx  DFA Expanded.dbf  DFA Expanded.sbn  DFA Expanded.sbx  DFA Expanded.shp  DFA Expanded.shp.xml  DFA Expanded.shx  De-facto_authority_(DFA).dbf  De-facto_authority_(DFA).sbn  De-facto_authority_(DFA).sbx  De-facto_authority_(DFA).shp  De-facto_authority_(DFA).shp.xml  De-facto_authority_(DFA).shx  IRG.dbf  IRG.sbn  IRG.sbx  IRG.shp  IRG.shp.xml  IRG.shx  STC.dbf  STC.sbn  STC.sbx  STC.shp  STC.shp.xml  STC.shx
data/flaring/: Flaring Shapefiles.dbf  Flaring Shapefiles.shp  Flaring Shapefiles.shx  flares_2021.csv
docs/: _config.yml  _toc.yml  data-products.html  foundational_datasets_and_data_products.html  foundational_datasets_and_data_products.md  introduction_to_data_goods.html  sample-indicators.html  team.html  team.md
notebooks/: nasa-apod.html  ntl-from-LEN.ipynb  ntl-yemen-adm1.ipynb  world-bank-api.html  world-bank-package.html
notebooks/NTL-notebooks/: 01-ntl-yemen-adm1.ipynb  02-ntl-yemen-control.ipynb  03-ntl-yemen-adm1-flares.ipynb  04-ntl-yemen-control-flares.ipynb  ntl-compare-sources.ipynb  ntl-yemen-control.ipynb  (+2 more)
(+1 files in other folders)
