[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datalab"
dynamic = ["version"]
description = "Data Goods supporting Yemen economic monitoring"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["world bank", "Yemen", "nighttime lights"]
authors = [
  {name="World Bank Development Data Group", email="datalab@worldbank.org"},
]
maintainers = [
  {name="Holly Krambeck", email="hkrambeck@worldbank.org"},
]
classifiers = [
    "Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
	"requests>=2.28.1",
    "pycountry>=22.3.5",
]
[project.optional-dependencies]
notebook = ["notebook>=6.5.2"]

[project.urls]
"Homepage" = "https://datapartnership.org/Yemen_Economic_Monitoring/README.html"
"Bug Reports" = "https://github.com/datapartnership/Yemen_Economic_Monitoring/issues"
"Source" = "https://datapartnership.org/Yemen_Economic_Monitoring/README.html"

[tool.setuptools.dynamic]
version = {attr = "datalab.__version__"}
